# go2-example

./: .gitattributes  .gitignore  README.md  artefacts.yaml  dataflow.pose.test.yaml  dataflow.test.yaml  dataflow.yaml  main.py  pyproject.toml
assets/excavator_scan/: excavator.usd
assets/excavator_scan/part1/: part1.usd
assets/excavator_scan/part2/: part2.usd
assets/excavator_scan/part3/: part3.usd
assets/excavator_scan/part4/: part4.usd
assets/excavator_scan/part5/: part5.usd
assets/jouer/: jouer-room01.usd  jouer.usda
assets/rail_blocks/: rail_blocks.usd
assets/rail_blocks/omniverse-content-production.s3-us-west-2.amazonaws.com/Assets/Isaac/5.0/Isaac/Environments/Grid/: default_environment.usd
assets/stone_stairs/: stone_stairs_f.usd
demo_policy/: policy.pt
listener-1/listener_1/: main.py
listener-1/tests/: test_listener_1.py
msgs/: pyproject.toml
msgs/src/msgs/: __init__.py
nodes/navigator/: README.md  pyproject.toml
nodes/navigator/navigator/: compute_command.py  main.py
nodes/navigator/tests/: test_navigator.py
nodes/policy_controller/: README.md  pyproject.toml
nodes/policy_controller/policy_controller/: main.py  policy.py  policy_config.py
nodes/policy_controller/tests/: test_policy_controller.py
nodes/simulation/: README.md  pyproject.toml
nodes/simulation/simulation/: auto_pilot.py  camera_manager.py  check_nvidia_driver.py  go2_robot.py  go2_scene.py  main.py  rtf_calculator.py  scene_config.py  simulation_time_output.py  video_writer.py  waypoint_mission.py
nodes/simulation/simulation/environments/: grid.usda  pyramid.py
nodes/simulation/tests/: test_simulation.py
nodes/tester/: README.md  pyproject.toml
nodes/tester/tester/: __main__.py  main.py  test_waypoints_poses.py  test_waypoints_report.py  transforms.py
nodes/tester/tests/: test_tester.py
policy/: env.yaml
src/__simulation/: __main__.py
src/simulation/: camera_manager.py  follow_camera.py  go2_robot.py  go2_scene.py  height_scan.py  input_listener.py  rerun_logger.py  steady_rate.py  video_writer.py  waypoint_mission.py
src/simulation/devices/: __init__.py  device_base.py
src/simulation/devices/gamepad/: __init__.py  se2_gamepad.py
src/simulation/devices/keyboard/: __init__.py
src/simulation/environments/: pyramid.py  rails.py
talker/: README.md  pyproject.toml
talker/talker/: main.py
talker/tests/: test_talker.py
tests/: test_auto_pilot.py
