[project]
name = "go2-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=16.0.1",
    "isaacsim[all,extscache]==5.0.0",
    "typer>=0.19.2",
    "torch>=2.7.0",
    "artefacts-cli>=0.9.6",
    "artefacts-toolkit>=0.7.1",
    "pandas>=2.3.3",
    "pygame>=2.6.1",
    "dora-rs-cli>=0.3.13",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[tool.uv.workspace]
members = ["temp/simulation"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-timeout>=2.4.0",
    "rerun-sdk>=0.23.1",
    "ruff>=0.14.0",
]

