[project]
name = "go2-example"
version = "0.0.0"
authors = [{ name = "Your Name", email = "email@email.com" }]
description = "go2-example"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "av>=16.0.1",
    "isaacsim[all,extscache]==5.0.0",
    "typer>=0.19.2",
    "torch>=2.7.0",
    "artefacts-toolkit>=0.7.1",
    "pandas>=2.3.3",
    "pygame>=2.6.1",
    "dora-rs-cli>=0.3.13",
    "scipy",
    "msgs",
]

[tool.uv.workspace]
members = ["nodes/*"]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
msgs = { path = "../../msgs", editable = true }

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[project.scripts]
simulation = "simulation.main:main"

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "UP"
]


