[project]
name = "tester"
version = "0.0.0"
authors = [{ name = "Your Name", email = "email@email.com" }]
description = "tester"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "artefacts-cli>=0.9.9",
    "dora-rs >= 0.3.9",
    "msgs",
    "posetree>=1.1.2",
    "pytest >=8.1.1",
    "pytest-timeout>=2.4.0",
    "transforms-py>=0.1.1",
]

[dependency-groups]
dev = ["ruff >=0.9.1"]

[project.scripts]
test_waypoints_poses = "tester.test_waypoints_poses:main"
test_waypoints_report = "tester.test_waypoints_report:main"

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "UP"
]

[tool.uv.sources]
msgs = { path = "../../msgs", editable = true }
